# fitvise

./: .gitignore  README.md  rag_pipeline.yaml
backend/: .env.example  .gitignore  AGENTS.md  API.md  CLAUDE.md  Dockerfile  RAG_VERIFICATION_REPORT.md  RAG_structure.md  README.md  REFACTORING_REPORT.md  api_example.py  boot.sh  cmd.sh  docker-compose.yml  example_usage.py  migration_plan_dependency-injection.md  pylintrc  pyproject.toml  pytest.ini  rag_pipeline.yaml  rag_pipeline_sample.yaml  requirements-test.txt  requirements.txt  run.py  test_api_documentation.json  test_inventory.json  test_rag_system.py  test_settings.py
backend/alembic/: env.py
backend/alembic/versions/: e740d970a15b_create_documents_table.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/application/: llm_service.py
backend/app/application/dto/: search.py
backend/app/application/use_cases/: __init__.py
backend/app/config/: __init__.py
backend/app/config/ml_models/: __init__.py  chunking_configs.py  embedding_model_configs.py
backend/app/config/vector_stores/: __init__.py  weaviate_config.py
backend/app/core/: compat.py  config.py  settings.py
backend/app/core/config/: vector_store_config.py
backend/app/di/: __init__.py  bootstrap.py  container.py  testing.py
backend/app/di/containers/: container.py  infra_container.py
backend/app/di/providers/: __init__.py  config.py  external.py  repositories.py  services.py
backend/app/domain/entities/: __init__.py  chunk.py  chunk_load_policy.py  conversation.py  data_source.py  document.py  document_reference.py  embedding.py  processing_job.py  query_context.py  retrieval_context.py  retrieval_result.py  search_query.py  search_result.py  vector_retrieval_config.py
backend/app/domain/exceptions/: __init__.py  chunking_exceptions.py  document_exceptions.py  embedding_exceptions.py  retrieval_exceptions.py
backend/app/domain/llm/: exceptions.py
backend/app/domain/repositories/: data_source_repository.py  embedding_repository.py  vector_repository.py
backend/app/domain/services/: __init__.py  analytics_service.py  context_service.py  context_window_manager.py  data_source_scanner.py  document_retrieval_service.py  embedding_service.py  prompt_service.py  reranking_service.py  retrieval_service.py  retrieval_validation_service.py  session_service.py  vector_retrieval_service.py
backend/app/domain/value_objects/: __init__.py  chunk_metadata.py  (+7 more)
backend/app/pipeline/: chunking_config_resolver.py  config.py  contracts.py  orchestrator.py  performance_tracker.py  workflow.py  workflow_di_example.py
backend/app/schemas/: chat.py  chat_payload_builder.py  search.py  workout.py
backend/app/services/: llm_service.py
backend/botadvisor/: README.md  __init__.py  docker-compose.yaml  pytest.ini
backend/botadvisor/app/: __init__.py  health.py  main.py
backend/botadvisor/docs/: agent_runtime.md  agent_runtime_plan.md  architecture.md  backlog.md  coding_conventions.md  migration.md  phase10_release_hardening_plan.md  product_scope.md  release_hardening.md  release_readiness.md  retrieval_quality.md  retrieval_quality_plan.md  tasks.md
backend/botadvisor/evaluation/: README.md  retrieval_gold_cases.json
backend/botadvisor/scripts/: __init__.py  dev.py  embed_upsert.py  evaluate_retrieval.py  ingest.py  release_check.py  setup_vector_store.py
backend/botadvisor/tests/: conftest.py
backend/deprecated/: prometheus.yml
backend/deprecated/legacy_backend/: README.md
backend/docs/: BACKLOG-format.md  BACKLOG.md  BOTADVISOR-BACKLOGS.md  BOTADVISOR-implementation-plan.md  BOTADVISOR-structure.md  MIGRATION_NOTES.md  agentic-rag-backlogs.md  di-backlogs.md  embedding_model_migration_report.md  llm_architecture.md  minimal_tasks_list_rag_engine.md  rag_backlogs.md  rag_embedding_pipeline_implementation.md  rag_phase1.md  rag_phase2.md  rag_phase3.md  rag_phase4.md  rag_phase5_core_presentation.md  rag_phase5_core_tests.md  rag_pipeline_flow.md  technical_architecture.md  vector_database_comparison.md  weaviate_schema_implementation.md
backend/docs/testing/: rag_llm_integration_tests.md
backend/models/: document_categorizer.pkl
backend/scripts/: README.md  README_RAG_PIPELINE.md  build_dags.py  build_rag_pipeline.py  embedding.py  ingestion.py  init_weaviate_schema.py  rag_summary.py  run_pipeline.py  setup_rag_infrastructure.py  setup_storage.py  setup_weaviate_schema.py  test_rag_integration.py  validate_schema.py
backend/scripts/examples/: use_container.py
backend/tests/: README.md  __init__.py  conftest.py  pytest.ini
backend/tests/e2e/: __init__.py  test_workout_workflows.py
backend/tests/fixtures/: __init__.py  sample_data.py
backend/tests/integration/: __init__.py  test_embedding_optimization.py
backend/tests/performance/: test_embedding_performance.py
backend/tests/unit/: __init__.py  test_langfuse_integration.py  test_sentence_transformer_optimized.py
backend/tests/utils/: __init__.py  test_helpers.py
(+508 files in other folders)
