[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "exceptiongroup==1.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.8.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
