[project]
name = "backend"
version = "0.1.0"
description = "AI assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "exceptiongroup==1.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.8.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "transformers>=4.55.3",
    "scikit-learn>=1.7.1",
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "requests>=2.32.5",
    "aiohttp>=3.12.15",
    "openpyxl>=3.1.5",
    "llama-index>=0.12.52",
    "llama-index-embeddings-huggingface>=0.5.5",
    "weaviate-client>=4.17.0",
    "xxhash>=3.6.0",
    "psutil>=7.1.2",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "asyncpg>=0.30.0",
    "alembic>=1.17.1",
    "aiosqlite>=0.21.0",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
