[project]
name = "botadvisor"
version = "0.1.0"
description = "Lean LLM-powered RAG service with Docling, LlamaIndex, LangChain"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "starlette==0.47.2",
    "python-multipart==0.0.20",
    "h11==0.16.0",
    "anyio==4.9.0",
    # Data Validation
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings>=2.10.1",
    "annotated-types==0.7.0",
    # LLM & RAG
    "langchain>=1.1.2",
    "langchain-core>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "llama-index>=0.14.8",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-vector-stores-weaviate>=1.4.1",
    # Vector Store
    "weaviate-client>=4.17.0",
    # Embeddings & ML
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "transformers>=4.55.3",
    "numpy>=2.3.2",
    # Observability
    "langfuse>=3.10.3",
    # HTTP Client
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "certifi==2025.7.14",
    "idna==3.10",
    "urllib3==2.5.0",
    "sniffio==1.3.1",
    # Utilities
    "python-dotenv==1.0.1",
    "aiofiles>=24.1.0",
    "xxhash>=3.6.0",
    "click==8.1.8",
    "psutil>=7.1.2",
    # Database (SQLite only)
    "sqlalchemy[asyncio]>=2.0.43",
    "aiosqlite>=0.21.0",
    # Type Hints
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    # Document Ingestion
    "docling~=2.65.0",      # Document ingestion (PDF, Office, etc.) - pinned to 2.65.x
    # Exception handling
    "exceptiongroup==1.3.0",
    # Text encoding
    "charset-normalizer==3.4.2",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.9",
]
